testsuite/tests/checks/abort_statements/test.out
abort_statements.adb:10:7: error: Abort_Statements - rule violation
10 |       abort T; -- FLAG
   |       ^^^^^^^^ 

